# torsobot

./: .gitignore  README.md
Code/Arduino/BasicControl_mod/: BasicControl_mod.ino
Code/Arduino/BasicMotorControl/: BasicMotorControl.ino
Code/Arduino/EncoderTest/: EncoderTest.ino
Code/Arduino/I2CDemoIMU/: I2CDemoIMU.ino
Code/Arduino/IMU_test/: IMU_test.ino
Code/Arduino/LoopBackDemoPico/: LoopBackDemoPico.ino
Code/Arduino/SPIDemo1/: SPIDemo1.ino
Code/Arduino/SPIDemo2/: SPIDemo2.ino
Code/Arduino/SPIDemo3/: SPIDemo3.ino
Code/Arduino/SPItoMyself/: SPItoMyself.ino
Code/Arduino/imu_angle_test/: imu_angle_test.ino
Code/Arduino/motor_IMU_test_1/: motor_IMU_test_1.ino
Code/Arduino/motor_driver_IMU/: motor_driver_IMU.ino
Code/Arduino/motor_encoder_test_1/: motor_encoder_test_1.ino
Code/Arduino/motor_torque_control_dualcore/: motor_torque_control_dualcore.ino  shared_messages.h
Code/Arduino/quaternion_yaw_pitch_roll/: quaternion_yaw_pitch_roll.ino
Code/Arduino/quaternion_yaw_pitch_roll_I2C/: quaternion_yaw_pitch_roll_I2C.ino
Code/Arduino/serial_test_code/: serial_test_code.ino
Code/Code/: code_flow.xlsx  ros2_architecture.pptx
Code/Code/raspberry_pi/: i2cDemo  i2cDemoIMU  i2cDemoIMU.cpp  i2c_demo.cpp  linuxI2CDemoIMU  linuxI2cDemoIMU.cpp  pigpioSPI  pigpioSPI1  pigpioSPI2  pigpio_demo.cpp  pigpio_demo_1.cpp  pigpio_demo_2.cpp  wPiI2cDemoIMU.cpp  wPi_demo  wiringPiSPI  wiring_pi_demo.cpp
Code/Code/ros2_ws/src/torsobot/: CMakeLists.txt  package.xml
Code/Code/ros2_ws/src/torsobot/config/: params.yaml
Code/Code/ros2_ws/src/torsobot/launch/: torsobot_launch.py
Code/Code/ros2_ws/src/torsobot/src/: data_logger_node.cpp  debugging.py  graphing.py  i2c_manager_node.cpp  mcu_node.cpp
Code/Modelling/WheeledPendulum/: README.md
Code/Pico/IMU_BNO085/: CMakeLists.txt
Code/Pico/hello_world/: CMakeLists.txt
Code/raspberry_pi/: SPIDemoPy.py  hello  hello_world.cpp  i2cDemoIMU.cpp  pigpio_demo  pigpio_demo.cpp  pigpio_demo_2.cpp  wPi_demo
Code/ros2_ws/data_logs/: csv_2025-09-16_18-54-18.csv  csv_2025-10-15_18-34-15.csv  csv_2025-10-15_18-37-40.csv  csv_2025-10-15_18-38-10.csv  csv_2025-10-15_18-43-55.csv  csv_2025-10-15_18-47-42.csv  csv_2025-10-15_18-52-14.csv  csv_2025-10-20_11-20-10.csv  csv_2025-10-20_11-22-34.csv  csv_2025-10-20_12-02-11.csv  csv_2025-10-20_12-03-43.csv  csv_2025-10-20_12-12-32.csv  csv_2025-10-20_12-13-10.csv  csv_2025-10-20_12-26-02.csv  csv_2025-10-20_12-27-16.csv  csv_2025-10-20_12-34-51.csv  (+262 more)
Code/ros2_ws/src/torsobot/: CMakeLists.txt  package.xml
Code/ros2_ws/src/torsobot/config/: params.yaml
Code/ros2_ws/src/torsobot/include/torsobot/: shared_messages.h
Code/ros2_ws/src/torsobot/launch/: torsobot_launch.py
Code/ros2_ws/src/torsobot/src/: data_logger_node.cpp  graphing.py  mcu_node.cpp  serial_test_node.cpp
Design/CAD/: 0.25in_bearing_outer_cover.SLDPRT  0.25in_bearing_spacer.SLDPRT  0.25in_bearing_spacer_2.SLDPRT  0.25in_d_shaft_hub.SLDPRT  0.25in_d_shaft_hub_small-Static 1.MFC  0.25in_d_shaft_hub_small-Static 1.gsz  0.25in_d_shaft_hub_small.SLDPRT  10mm_bearing_outer_cover.SLDPRT  10mm_bearing_spacer.SLDPRT  10mm_d_shaft_hub-Static 1.CWR  10mm_d_shaft_hub-Static 1.MFC  10mm_d_shaft_hub-Static 2 from [Static 1].MFC  10mm_d_shaft_hub-Static 2 from [Static 1].gsz  10mm_d_shaft_hub-Topology Study 1.gsz  10mm_d_shaft_hub-Topology_Study_1-GD.par  10mm_d_shaft_hub.SLDPRT  10mm_d_shaft_hub.stl  10mm_d_shaft_hub_clearance_holes.SLDPRT  6.25mm_d_shaft_hub-Static 1.MFC  6.25mm_d_shaft_hub-Static 1.gsz  IMU_assembly.SLDASM  IMU_mount.SLDPRT  Mirror10mm_d_shaft_hub.SLDPRT  Mirrorwheel_asm.SLDASM  ParetoWorksLog.txt  can_controller_mount.SLDPRT  encoder_magnet.SLDPRT  foot.SLDPRT  foot_thickener.SLDPRT  magnet_mount.SLDPRT  motor_battery_clamp.SLDPRT  motor_battery_holder.SLDPRT  motor_battery_holder_bottom_modified.SLDPRT  motor_battery_holder_bottom_sideplate.SLDPRT  motor_battery_holder_modified.SLDPRT  motor_battery_holder_sideplate.SLDPRT  motor_mounting_plate.SLDPRT  motor_shaft_collar_flat.SLDPRT  motor_shaft_collar_round.SLDPRT  reed_switch_assy.SLDASM  (+15 more)
Design/Calculations and Notes/: Calculations.xlsx  tube_optimization.m
Design/Torsobot/: wheel_asm.SLDASM
Old/OpenSourceLeg/: OSL_v2-BoM-5-22-2022.xlsx
Old/TorsoBot_SW/: 20Dmotor(1).SLDPRT  20Dmotor.SLDPRT  2664N454_METAL GEAR - 20 DEGREE PRESSURE ANGLE.SLDPRT  300mm wheel.SLDPRT  300mm wheel_IPS.SLDPRT  300mm wheel_enhanced.DXF  300mm wheel_enhanced.SLDPRT  400mm wheel.DXF  400mm wheel.SLDPRT  400mm wheel_kicker_35.SLDPRT  57655K450_PLASTIC GEAR--14-.5 DEG PRESSURE ANGLE(1).SLDPRT  57655K450_PLASTIC GEAR--14-.5 DEG PRESSURE ANGLE.SLDPRT  57655K530_PLASTIC GEAR--14-.5 DEG PRESSURE ANGLE.SLDPRT  60355K503_BALL BEARING(1).SLDPRT  60355K503_BALL BEARING.SLDPRT  6325K310_MTL GEAR--14-.5 DEG PRESSURE ANGLE.SLDPRT  6325K630_MTL GEAR--14-.5 DEG PRESSURE ANGLE.SLDPRT  6325K950_MTL GEAR--14-.5 DEG PRESSURE ANGLE.SLDPRT  6435K120_ONE-PIECE CLAMP-ON SHAFT COLLAR.SLDPRT  6832K620_HT-LOAD MTL GEAR--20 DEG PRESSURE ANGLE.SLDPRT  6832K640_HT-LOAD MTL GEAR--20 DEG PRESSURE ANGLE.SLDPRT  90mm screw.SLDPRT  91075A466_18-8 SS MALE-FEM THRDED HEX STANDOFF.SLDPRT  92375A430_316 STAINLESS STEEL HAIRPIN COTTER PIN(1).SLDPRT  92375A430_316 STAINLESS STEEL HAIRPIN COTTER PIN.SLDPRT  92401A625_316 STAINLESS STEEL CLEVIS PIN.SLDPRT  93800A127_NYLON HEX NUT.SLDPRT  9414T600_SET SCREW SHAFT COLLAR(1).SLDPRT  9414T600_SET SCREW SHAFT COLLAR.SLDPRT  96974A101_ 1050-1095 SPRING STEEL HAIRPIN COTTER PINS.SLDPRT  98306A100_STEEL CLEVIS PIN(1).SLDPRT  98306A100_STEEL CLEVIS PIN.SLDPRT  98381A536_ALLOY STEEL DOWEL PIN.SLDPRT  98381A543_ALLOY STEEL DOWEL PIN (1).DWG  98381A543_ALLOY STEEL DOWEL PIN(1).SLDPRT  98381A543_ALLOY STEEL DOWEL PIN.SLDPRT  98381A552_ALLOY STEEL DOWEL PIN(1).SLDPRT  98381A552_ALLOY STEEL DOWEL PIN.SLDPRT  BackPlate2.SLDPRT  Backplate1.SLDPRT  (+58 more)
log/: latest_list
(+879 files in other folders)
